# quick-resume

./: .gitignore  Cargo.toml  Claude.md  README.md
.cargo/: config.toml
.claude/: settings.local.json
src/: main.rs
src/process/: attach.rs  info.rs  mod.rs  suspend.rs
src/restore/: launch.rs  memory.rs  mod.rs  reader.rs  threads.rs
src/snapshot/: memory.rs  mod.rs  threads.rs  writer.rs
src/util/: error.rs  mod.rs  pe.rs
